--- a/Project2/Project2/Project2/Base.lproj/Main.storyboard
+++ b/Project2/Project2/Project2/Base.lproj/Main.storyboard
@@ -21,18 +21,27 @@
                                 <state key="normal" image="estonia">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="flagButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="X1F-H7-cWU"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ef-9J-UFX">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ef-9J-UFX">
                                 <rect key="frame" x="200" y="180" width="200" height="100"/>
                                 <state key="normal" image="estonia">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="flagButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dsU-PN-sgM"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCs-0U-FJc">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCs-0U-FJc">
                                 <rect key="frame" x="200" y="288" width="200" height="100"/>
                                 <state key="normal" image="estonia">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="flagButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="SLF-K2-IGu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
